Fix spacing between email field and Send code button on the request-template page

--- a/projects/web-inviter/src/app/pages/request-template/request-template.component.scss
+++ b/projects/web-inviter/src/app/pages/request-template/request-template.component.scss
@@ -37,13 +37,14 @@
   flex-direction: column;
 }
 .otp {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
 }
 .actions {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   gap: 0.75rem;
+  margin-top: 1.5rem;
 }
 .tlist {
   display: flex;
